# Synapse-Network-Sdk

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  SUPPORT.md  llm-instructions.md  llms.txt
.agents/skills/sdk-public-readme/: SKILL.md
docs/: README.md  quality-gates.md
docs/agent-map/: README.md  index.json
docs/bugfix/: staging-e2e.md
docs/bugfix/python/: bugs.md
docs/guides/: getting-started.md
docs/ops/: SDK_Python_Staging_Development.md  release-checklist.md  sdk-release-runbook.md
docs/sdk/: README.md  README.zh-CN.md  api-parity-matrix.md  capability_inventory.md  dotnet_integration.md  go_integration.md  java_integration.md  python_integration.md  python_provider_integration.md  typescript_integration.md  typescript_provider_integration.md
docs/test/: python-consumer-cold-start-e2e-plan.md  python-consumer-staging-e2e-plan.md  python-provider-onboarding-e2e-plan.md
dotnet/examples/e2e/: Program.cs
examples/prod-published/: README.md
go/examples/e2e/: main.go
go/synapse/: client.go  client_test.go  doc.go
java/: pom.xml
java/examples/: pom.xml
python/: README.md  pyproject.toml
python/examples/: consumer_call_provider.py  consumer_wallet_to_invoke.py  e2e.py  free_service_smoke.py  llm_smoke.py  provider_staging_onboarding.py  smoke_test.py
python/synapse_client/: config.py
python/synapse_client/test/: test_auth_unit.py  test_client_unit.py
scripts/ci/: python_checks.sh  repo_hygiene_checks.sh
scripts/e2e/: sdk_parity_e2e.sh  sdk_wave1_local.sh  staging_env_loader.sh
scripts/publish/: maven_central_deploy.sh
typescript/: README.md  package-lock.json  package.json
typescript/examples/: _shared.ts
typescript/src/: client.ts  config.ts  types.ts
(+15 files in other folders)
